--- a/frontend/src/app/components/video-player/video-player.component.css
+++ b/frontend/src/app/components/video-player/video-player.component.css
@@ -11,8 +11,8 @@ video {
   position: relative;
   background-color: #000;
   display: flex;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   align-items: center;
   justify-content: center;
 }
